<?xml version="1.0"?>
<package>
  <name>fulanghua_evaluator</name>
  <version>0.0.1</version>
  <description>The fulanghua_evaluator package</description>

  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>

  <license>BSD</license>

  <author email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
