<?xml version="1.0"?>
<package>
  <name>fulanghua_srvs</name>
  <version>0.0.1</version>
  <description>The fulanghua_srvs package</description>

  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>

  <license>BSD</license>

  <author email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
