<?xml version="1.0"?>
<package>
  <name>fulanghua_static_path_publisher</name>
  <version>0.0.1</version>
  <description>The fulanghua_static_path_publisher package</description>

  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>

  <license>BSD</license>

  <author>Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
